force-app/main/default/objects/Course_Specific_Document__c.object
<CustomObject>
    <description>Object that holds the specifications for the document checklist to be created per acps created by the applicant.</description>
    <fields>
        <fullName>Course_Code__c</fullName>
        <formula>Course__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Course Specific Documents</relationshipLabel>
        <relationshipName>Course_Specific_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Faculty_Name__c</fullName>
        <label>Faculty Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Faculty of Art, Design and Architecture</fullName>
                </value>
                <value>
                    <fullName>Faculty of Arts</fullName>
                </value>
                <value>
                    <fullName>Faculty of Business and Economics</fullName>
                </value>
                <value>
                    <fullName>Faculty of Education</fullName>
                </value>
                <value>
                    <fullName>Faculty of Engineering</fullName>
                </value>
                <value>
                    <fullName>Faculty of Information Technology</fullName>
                </value>
                <value>
                    <fullName>Faculty of Law</fullName>
                </value>
                <value>
                    <fullName>Faculty of Medicine, Nursing and Health Sciences</fullName>
                </value>
                <value>
                    <fullName>Faculty of Pharmacy and Pharmaceutical Sciences</fullName>
                </value>
                <value>
                    <fullName>Faculty of Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Instruction__c</fullName>
        <label>Instruction</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Course Specific Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Instruction__c</columns>
        <columns>Faculty_Name__c</columns>
        <columns>Course__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course Specific Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Specific Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Course_or_Faculty_should_be_populated</fullName>
        <active>true</active>
        <description>Only either Course or Faculty should be populated</description>
        <errorConditionFormula>OR(AND(ISBLANK(Course__c), ISPICKVAL(Faculty_Name__c,&apos;&apos;)), AND(NOT(ISBLANK(Course__c)), NOT(ISPICKVAL(Faculty_Name__c,&apos;&apos;))))</errorConditionFormula>
        <errorMessage>Course or Faculty should be entered but not both.</errorMessage>
    </validationRules>
</CustomObject>